--- a/_posts/2011-08-02-22nd-of-July.md
+++ b/_posts/2011-08-02-22nd-of-July.md
@@ -11,7 +11,7 @@ Myself and all other Norwegians saw terror in a light we have never seen it befo
 
 What most Norwegians experienced on and after the 22nd of July is, of course, nothing compared to the experiences of so many other Norwegians. Everyone has read and heard accounts from those who survived the shooting on Ut&oslash;ya. The victims and their families have gone through an ordeal very few can even imagine, much less understand. I was lucky enough to be far away from the terror, safe and sound in my living room. Yet I felt terrified. I felt like I was also being attacked.
 
-I have never been very good at empathy. Sympathy I can do. I find myself genuinely feeling sorry for others and what they are going through, but while I may feel sad on behalf of someone, I've never really been able to partake in their sadness. This changed on the 22nd of July. Prevalent among the feelings I experienced in the wake of the attacks was a feeling of real sadness. My country had been attacked in a gruesome way, and I took the attack personally, as I believe a lot of Norwegians did. It was an attack on us, an attack on what we stand for.
+I have never been very good at empathy. Sympathy I can do. I find myself genuinely feeling sorry for others and what they are going through, but while I may feel sad on behalf of someone, I've never really been able to partake in their sadness. This changed on the 22nd of July. Prevalent among the feelings I experienced in the wake of the attacks was a feeling of real sadness. My country had been attacked in a gruesome way, and I took the attack personally, as I believe a lot of Norwegians did. It was an attack on us all, an attack on what we stand for.
 
 The attack consisted of the murder of a large number of people, many of whom were very young. A tragic, unnecessary, and almost surreal waste of life. Naturally and rightfully this is where most of the attention has been directed. However, the survivors from the island have tended to be the first to stress that the attacks were also an attack on something else. It was an attack on Norway.
 
@@ -27,7 +27,7 @@ Tough.
 
 The people have spoken quite clearly. We won't let an attack change us, be it our policy, our open society or what the BBC calls our innocence. We live under the enormous privilege of not needing to have armed police patrolling the streets. There is little crime. Our politicians are part of society and go about their business like "normal" people, without a fuss being made about it. We have the privilege of living in a place where acts of terror have always been unthinkable, a privilege that I hope and think we will keep in the future.
 
-We have the privilege of having an exceptionally open political debate which generally doesn't get reduced to the dirt-slinging, headline-grabbing, soundbyte-seeking debate that I tend to see in the UK. A debate the prime minister made an important comment on during a speech he held in parliament yesterday, "we should not go witch-hunting for people who may have expressed themselves in an unfortunate manner in the past." There has been, as there should be, debates on issues surrounding immigration and integration. Politicians have admitted that unfortunate things have been said in the heat of these debates, and that they will be more conscious of how they phrase arguments in the future. It is important that honest debate on sensitive issues will still be allowed to take place. While I may disagree with the policies of a party such as FrP, it is important that they speak as freely now as they did before the attacks. It is important to accept that, while they may support a stricter policy on immigration, that doesn't make them intolerant or racist. Those are not words that should be thrown around, and all parties do support a multicultural Norway. They just have different ideas about the best ways to achieve it. Ideas we will continue to discuss openly, cleanly and honestly.
+We have the privilege of having an exceptionally open political debate which generally doesn't get reduced to the dirt-slinging, headline-grabbing, soundbyte-seeking debate that I tend to see in the UK. A debate the prime minister made an important comment on during a speech he held in parliament yesterday, "we should not go witch-hunting for people who may have expressed themselves in an unfortunate manner in the past." There has been, as there should be, debates on issues surrounding immigration and integration. Politicians have admitted that unfortunate things have been said in the heat of these debates, and that they will be more conscious of how they phrase arguments in the future. It is important that honest debate on sensitive issues will still be allowed to take place. While I may disagree with the policies of a party such as FrP, it is important that they speak as freely now as they did before the attacks. It is important to accept that, while they may support a stricter policy on immigration, that doesn't make them intolerant or racist. Those are not words that should be thrown around, and all parties do support a multicultural Norway. They just have different ideas on how best to achieve it. Ideas we will continue to discuss openly, cleanly and honestly.
 
 I was sad on the 22nd of July, and I still am. I was sad that my country was being attacked, shocked at the hole that was blown through the main building of the government and appalled at the brutality that took place on Ut&oslash;ya. In the aftermath I have also felt incredibly proud of our Prime Minister, our king, our government and our people for the way in which we have handled the situation. It might be a clich&eacute;, but we truly have defeated hate with love. I see this as a sign that we will continue to preserve the society we all love so much. That we won't let an attack change our way of life. I hope that unarmed police will still be the norm and that politics will continue to be as open and accessible as it always has been. Talking heads on televisions in the US and the UK might call us naive. I don't see it that way. I'm not arguing that we shouldn't be prepared for any future terror-attacks that might strike us. I'm arguing that we shouldn't let it scare us or change the way we live our lives.
 
