--- a/_posts/2011-08-02-22nd-of-July.md
+++ b/_posts/2011-08-02-22nd-of-July.md
@@ -25,7 +25,7 @@ The collective national reaction to the attack has reminded me of what it is tha
 
 Tough.
 
-The people have spoken quite clearly. We won't let an attack change us, be it our policy, our open society or what the BBC calls our innocence. We live under the enormous privilege of not needing to have armed police patrolling the streets. There is little crime. Our politicians are part of society and go about their business like "normal" people, without a fuss being made about it. We have the privilege of living in a place where acts of terror have always been unthinkable, a privilege that I hope and think we will keep in the future.
+The people of Norway have spoken quite clearly. We won't let an attack change us, be it our policy, our open society or what the BBC calls our innocence. We live under the enormous privilege of not needing to have armed police patrolling the streets. There is little crime. Our politicians are part of society and go about their business like "normal" people, without a fuss being made about it. We have the privilege of living in a place where acts of terror have always been unthinkable, a privilege that I hope and think we will keep in the future.
 
 We have the privilege of having an exceptionally open political debate which generally doesn't get reduced to the dirt-slinging, headline-grabbing, soundbyte-seeking debate that I tend to see in the UK. A debate the prime minister made an important comment on during a speech he held in parliament yesterday, "we should not go witch-hunting for people who may have expressed themselves in an unfortunate manner in the past." There has been, as there should be, debates on issues surrounding immigration and integration. Politicians have admitted that unfortunate things have been said in the heat of these debates, and that they will be more conscious of how they phrase arguments in the future. It is important that honest debate on sensitive issues will still be allowed to take place. While I may disagree with the policies of a party such as FrP, it is important that they speak as freely now as they did before the attacks. It is important to accept that, while they may support a stricter policy on immigration, that doesn't make them intolerant or racist. Those are not words that should be thrown around, and all parties do support a multicultural Norway. They just have different ideas on how best to achieve it. Ideas we will continue to discuss openly, cleanly and honestly.
 
