Minor update to blog-post.

--- a/_posts/2011-08-02-22nd-of-July.md
+++ b/_posts/2011-08-02-22nd-of-July.md
@@ -29,6 +29,6 @@ The people of Norway have spoken quite clearly. We won't let an attack change us
 
 We have the privilege of having an exceptionally open political debate which generally doesn't get reduced to the dirt-slinging, headline-grabbing, soundbyte-seeking debate that I tend to see in the UK. A debate the prime minister made an important comment on during a speech he held in parliament yesterday, "we should not go witch-hunting for people who may have expressed themselves in an unfortunate manner in the past." There has been, as there should be, debates on issues surrounding immigration and integration. Politicians have admitted that unfortunate things have been said in the heat of these debates, and that they will be more conscious of how they phrase arguments in the future. It is important that honest debate on sensitive issues will still be allowed to take place. While I may disagree with the policies of a party such as FrP, it is important that they speak as freely now as they did before the attacks. It is important to accept that, while they may support a stricter policy on immigration, that doesn't make them intolerant or racist. Those are not words that should be thrown around, and all parties do support a multicultural Norway. They just have different ideas on how best to achieve it. Ideas we will continue to discuss openly, cleanly and honestly.
 
-I was sad on the 22nd of July, and I still am. I was sad that my country was being attacked, shocked at the hole that was blown through the main building of the government and appalled at the brutality that took place on Ut&oslash;ya. In the aftermath I have also felt incredibly proud of our Prime Minister, our king, our government and our people for the way in which we have handled the situation. It might be a clich&eacute;, but we truly have defeated hate with love. I see this as a sign that we will continue to preserve the society we all love so much. That we won't let an attack change our way of life. I hope that unarmed police will still be the norm and that politics will continue to be as open and accessible as they always has been. Talking heads on televisions in the US and the UK might call us naive. I don't see it that way. I'm not arguing that we shouldn't be prepared for any future terror-attacks that might strike us. I'm arguing that we shouldn't let it scare us or change the way we live our lives.
+I was sad on the 22nd of July, and I still am. I was sad that my country was being attacked, shocked at the hole that was blown through the main building of the government and appalled at the brutality that took place on Ut&oslash;ya. In the aftermath I have also felt incredibly proud of our Prime Minister, our king, our government and our people for the way in which we have handled the situation. It might be a clich&eacute;, but we truly have defeated hate with love. I see this as a sign that we will continue to preserve the society we all love so much. That we won't let an attack change our way of life. I hope that unarmed police will still be the norm and that our politics will continue to be as open and accessible as they always have been. Talking heads on televisions in the US and the UK might call us naive. I don't see it that way. I'm not arguing that we shouldn't be prepared for any future terror-attacks that might strike us. I'm arguing that we shouldn't let it scare us or change the way we live our lives.
 
 There is only one appropriate response. The attack was designed to radically change Norway. We ain't changing it.
